--- a/2.html
+++ b/2.html
@@ -1,25 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <title>Document</title>
-   <style>
-   button {
-      width: 50px;
-      height: 50px;
-   }
-   </style>
-</head>
-<body>
-<p id="p">
-   Текст
-</p>
-<button onclick = 'change()'></button>
-<SCRIPT>
-function change() {
-   let a = 'Happy', b = " New Year"
-   document.getElementById('p').textContent = a + b;
-}
-</SCRIPT>
-</body>
-</html>
+<script>
+   a = +prompt('a'), b = +prompt('b'), c = +prompt('c')
+   alert( 
+            ( (a*a+b*b) == c*c ) ? 'Ура .... ' : 'Не ура'
+       )
+</script>
